# atom-client-unofficial

./: .mise.toml  .tool-versions  CHANGELOG.md  Justfile  README.md  atom.yaml  metadata.json  pyproject.toml
.github/workflows/: build_and_publish.yml  release.yml
atom_client/: __init__.py
atom_client/api/default/: get_partner_ping.py  get_partner_v1_venue_details_search.py  get_partner_v_1_production_ids_by_venue_venue_id.py  get_partner_v_1_production_search_by_name.py  get_partner_v_1_productions_by_vendor_production_id_vendor_production_id.py  get_partner_v_1_showtime_details_by_venue_venue_id.py  get_partner_v_1_venue_details_by_location.py  (+7 more)
atom_client/models/: __init__.py  address.py  attribute.py  cast.py  contributors.py  crew.py  get_production_details_request.py  get_showtime_details_request.py  get_showtimes_for_venues_request.py  get_venue_details_request.py  image_data.py  iso_date_bounds.py  lat_lon_pair.py  local_date_bounds.py  offer.py  offer_data.py  page_info.py  pre_order_detail.py  price.py  production_detail.py  production_details_response.py  production_ids_response.py  production_media.py  properties.py  showtime_detail.py  showtime_details_for_venues_response.py  showtime_details_for_venues_response_attribute_map.py  showtime_details_for_venues_response_production_details_map.py  showtime_details_for_venues_response_venue_showtime_details_map.py  showtime_details_response.py  showtime_details_response_attribute_map.py  trailer_data.py  venue.py  venue_detail.py  venue_details_response.py  venue_showtime_details.py
examples/: atom.py
