[project]
name = "atom_client"
version = "0.1.0"
description = "A client library for accessing atom"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.20.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]
authors = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atom_client"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
