[project]
name = "atom-client-unofficial"
version = "1.0.0"
description = "A client library for accessing atom"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.20.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]
authors = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atom_client"]

[tool.ruff]
line-length = 120
exclude = ["examples"]

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.pyright]
exclude = ["examples", ".venv", "**/__pycache__"]
ignore = ["examples"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.4.2",
    "ruff>=0.15.0",
]
